fix: don't show an unnecessary scrollbar

--- a/src/style.css
+++ b/src/style.css
@@ -81,7 +81,7 @@ documentation-sidebar {
   display: flex;
   padding-right: 15px;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
     documentation-sidebar sidebar-divider {
       display: flex;
@@ -110,7 +110,7 @@ documentation-view {
   right: 0;
 
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   padding-top: 16px;
 }
